cabal-version:      2.4
name:               plzoo
version:            0.1.0

executable poly
    main-is: Main.hs

    other-modules:
        Infer
        Lexer
        Parser
        Syntax
        Type

    build-depends:    
          base         
        , containers 
        , haskeline  
        , mtl        
        , parsec
        , pretty-simple
        
    hs-source-dirs:   src/poly
    default-language: Haskell2010
